syntax = "proto3";
package forms.admin;

service Admin {
  rpc GetForms(AdminRequest) returns (AdminResponse);
  rpc GetRepliesByFormId(AdminRequest) returns (AdminResponse);
  rpc CreateForm(AdminRequest) returns (AdminResponse);
  rpc EditFormById(AdminRequest) returns (AdminResponse);
}

// all admin requests accept the params,headers and context objects as stringified json
message AdminRequest {
  string params = 1;
  string headers = 2;
  string context = 3;
}
// all admin responses return their results as stringified json
message AdminResponse {
  string result = 1;
}
